# oca_langchain

./: .env.template  .gitignore  CLAUDE.md  DEBUGGING_NOTES.md  README.md  TESTING.md  TEST_RESULTS.md  anthropic_api.py  api.py  app.py  burp_ca.pem  ca_with_burp.pem  config.yaml  custom_llm.py  findings.md  model_resolver.py  oauth2_token_manager.py  oca_llm.py  oca_oauth2_token_manager.py  openai_api_smoke.sh  progress.md  pyproject.toml  responses_api.py  responses_passthrough.py  run_api.sh  run_api_cron.sh  runtime_env.py  ssh_tunnel_hyper.sh  ssh_tunnel_myarm.sh  task_plan.md  test_api_validation.py  test_edge_cases.py  test_message_validation.py  test_unified_validation.py
converters/: __init__.py  anthropic_request_converter.py  responses_converter.py
core/: __init__.py  codex_config_generator.py  llm.py  logger.py  oauth2_token_manager.py  token_utils.py  upstream_auth.py
docs/: ANTHROPIC_API.md  SPRINT1_COMPLETION_REPORT.md  ccproxy-usage.md
examples/: anthropic_examples.py
models/: __init__.py  anthropic_types.py  responses_types.py
scripts/: generate_codex_config.py
templates/: codex_config.toml.template
tests/: __init__.py  test_422_debug.py  test_422_request_validation.py  test_anthropic_api.sh  test_codex_config_generator.py  test_dynamic_env_reload.py  test_e2e_api_validation.py  test_e2e_responses_api.py  test_llm_logging_compaction.py  test_llm_model_api_support.py  test_model_resolution.py  test_model_resolver.py  test_responses_api.py  test_responses_converter.py  test_responses_types.py  test_runtime_env.py  test_sse_stream_safety.py  (+4 more)
(+10 files in other folders)
